pkg/ee/default-policy-catalog/policies/require-run-as-non-root-user.yml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.22-1.23
    kyverno.io/kyverno-version: 1.6.0
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/description: Containers must be required to run as non-root users. This policy ensures `runAsUser` is either unset or set to a number greater than zero.
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Require Run As Non-Root User
  name: require-run-as-non-root-user
spec:
  background: true
  rules:
    - match:
        any:
          - resources:
              kinds:
                - Pod
      name: run-as-non-root-user
      validate:
        message: Running as root is not allowed. The fields spec.securityContext.runAsUser, spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser, and spec.ephemeralContainers[*].securityContext.runAsUser must be unset or set to a number greater than zero.
        pattern:
          spec:
            =(ephemeralContainers):
              - =(securityContext):
                  =(runAsUser): '>0'
            =(initContainers):
              - =(securityContext):
                  =(runAsUser): '>0'
            =(securityContext):
              =(runAsUser): '>0'
            containers:
              - =(securityContext):
                  =(runAsUser): '>0'
  validationFailureAction: Enforce
